force-app/main/default/objects/NSSales_NPO_Approval__c/NSSales_NPO_Approval__c.object-meta.xml
<CustomObject>
    <description>Custom object for storing approvers for NPO Approval Process.</description>
    <label>NPO Approval</label>
    <nameField>
        <displayFormat>NPO-{00000}</displayFormat>
        <label>NPO Approval ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPO Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>