force-app/main/default/objects/NSSales_NPO_Approval__c/fields/NSSales_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Approval_Date__c</fullName>
    <description>It captures the approval date</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>