force-app/main/default/objects/NSSales_NPO_Approval__c/fields/NSSales_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Approval_Type__c</fullName>
    <description>Approval Type for the related opportunity</description>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPS Planning North</fullName>
            </value>
            <value>
                <fullName>OPS Planning Central</fullName>
            </value>
            <value>
                <fullName>OPS Planning South</fullName>
            </value>
            <value>
                <fullName>OPS Planning West</fullName>
            </value>
            <value>
                <fullName>Unit Train</fullName>
            </value>
            <value>
                <fullName>Network Capacity</fullName>
            </value>
            <value>
                <fullName>Network Optimization</fullName>
            </value>
            <value>
                <fullName>Commercial Planning</fullName>
            </value>
            <value>
                <fullName>Interline Services</fullName>
            </value>
            <value>
                <fullName>Auto/Intermodal</fullName>
            </value>
            <value>
                <fullName>Industrial Products/Unit</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>OPS Planning NOC</fullName>
            </value>
            <value>
                <fullName>OPS Planning East</fullName>
                <isActive>false</isActive>
                <label>OPS Planning East</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>