force-app/main/default/objects/NSSales_NPO_Approval__c/fields/NSSales_Need_by_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Need_by_Date__c</fullName>
    <formula>NSSales_Related_Opportunity__r.NSSales_Need_by_Date__c</formula>
    <label>Need by Date</label>
    <type>Date</type>
</CustomField>