force-app/main/default/objects/NSSales_NPO_Approval__c/fields/NSSales_NPO_Approval_Status_Counter__c.field-meta.xml
<CustomField>
    <fullName>NSSales_NPO_Approval_Status_Counter__c</fullName>
    <formula>IF(OR(TEXT(NSSales_Status__c)=&#39;Rejected&#39;,TEXT(NSSales_Status__c)=&#39;Approved&#39;),   NSSales_Approval_Date__c - CreatedDate  , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPO Approval Status Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>