force-app/main/default/objects/NSSales_NPO_Approval__c/fields/NSSales_Origination_Department__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Origination_Department__c</fullName>
    <formula>Text(NSSales_Related_Opportunity__r.NS_Originating_Department__c)</formula>
    <label>Origination Department</label>
    <type>Text</type>
</CustomField>