force-app/main/default/objects/NSSales_NPO_Approval__c/fields/NSSales_Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NPO Approvals</relationshipLabel>
    <relationshipName>NPO_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>