force-app/main/default/objects/NSSales_NPO_Approval__c/fields/NSSales_Status__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Status__c</fullName>
    <description>It captures the approval status i.e, approved or rejected</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>