force-app/main/default/objects/NSSales_NPO_Approval__c/fields/NSSales_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Submit_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It checks if approval process is already initiated</description>
    <label>Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>