force-app/main/default/objects/NSSales_NPO_Approval__c/fields/status1__c.field-meta.xml
<CustomField>
    <fullName>status1__c</fullName>
    <formula>Text(NSSales_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>status1</label>
    <type>Text</type>
</CustomField>