force-app/main/default/objects/NSSales_NPO_Approval__c/listViews/NSSales_Auto_Intermodal_Approver_NSSales_NPO_Approval.listView-meta.xml
<ListView>
    <fullName>NSSales_Auto_Intermodal_Approver_NSSales_NPO_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>Auto/Intermodal Approver</label>
    <queue>NSSales_Auto_Intermodal_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>