force-app/main/default/objects/NSSales_NPO_Approval__c/listViews/NSSales_Industrial_Products_Unit_Approve_NSSales_NPO_Approval.listView-meta.xml
<ListView>
    <fullName>NSSales_Industrial_Products_Unit_Approve_NSSales_NPO_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>Industrial Products/Unit Approver</label>
    <queue>NSSales_Industrial_Products_Unit_Approve</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>