force-app/main/default/objects/NSSales_NPO_Approval__c/listViews/NSSales_Interline_Services_Approver_NSSales_NPO_Approval.listView-meta.xml
<ListView>
    <fullName>NSSales_Interline_Services_Approver_NSSales_NPO_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>Interline Services Approver</label>
    <queue>NSSales_Interline_Services_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>