force-app/main/default/objects/NSSales_NPO_Approval__c/listViews/NSSales_Network_Optimization_Approver_NSSales_NPO_Approval.listView-meta.xml
<ListView>
    <fullName>NSSales_Network_Optimization_Approver_NSSales_NPO_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>Network Optimization Approver</label>
    <queue>NSSales_Network_Optimization_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>