force-app/main/default/objects/NSSales_NPO_Approval__c/listViews/NSSales_Open_OPS_Planning_North_Requests.listView-meta.xml
<ListView>
    <fullName>NSSales_Open_OPS_Planning_North_Requests</fullName>
    <columns>NAME</columns>
    <columns>NSSales_Related_Opportunity__c</columns>
    <columns>NSSales_Need_by_Date__c</columns>
    <columns>NSSales_Origination_Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NSSales_Status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>NSSales_Approval_Type__c</field>
        <operation>equals</operation>
        <value>OPS Planning North</value>
    </filters>
    <label>Open OPS Planning North Requests</label>
</ListView>