force-app/main/default/objects/NSSales_NPO_Approval__c/listViews/NSSales_OPS_Planning_Central_Approver_NSSales_NPO_Approval.listView-meta.xml
<ListView>
    <fullName>NSSales_OPS_Planning_Central_Approver_NSSales_NPO_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>OPS Planning Central Approver</label>
    <queue>NSSales_OPS_Planning_Central_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>